--- a/src/app/components/signup-dialog/signup-dialog.component.html
+++ b/src/app/components/signup-dialog/signup-dialog.component.html
@@ -1,36 +1,45 @@
 <div class="signup">
 
   <div class="signup__heading">
-    <p>Sign Up</p>
-    <p (click)="closeDialog()">X</p>
+    <p class="title">Sign Up</p>
+    <mat-icon class="signup__close-button" (click)="closeDialog()">close</mat-icon>
   </div>
 
   <mat-form-field class="signup__form-field">
     <mat-label>First Name</mat-label>
     <input class="signup__input" [formControl]="firstName" matInput placeholder="First Name">
+    <mat-error class="signup__error" *ngIf="firstName.invalid">{{getErrorMessage(firstName)}}</mat-error>
   </mat-form-field>
-
+   
   <mat-form-field class="signup__form-field">
     <mat-label>Last Name</mat-label>
     <input class="signup__input" [formControl]="lastName" matInput placeholder="Last Name">
+    <mat-error class="signup__error" *ngIf="lastName.invalid">{{getErrorMessage(lastName)}}</mat-error>
   </mat-form-field>
-
+  
   <mat-form-field class="signup__form-field">
     <mat-label>Enter your email</mat-label>
     <input class="signup__input" matInput placeholder="abc@xyz.com" [formControl]="email" required>
-    <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+    <mat-error class="signup__error" *ngIf="email.invalid">{{getErrorMessage(email)}}</mat-error>
   </mat-form-field>
-
+  
   <mat-form-field class="signup__form-field">
     <mat-label>Enter your password</mat-label>
     <input class="signup__input" matInput [formControl]="password" [type]="hide ? 'password' : 'text'">
     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
       <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
+    <mat-error class="signup__error" *ngIf="password.invalid">{{getErrorMessage(password)}}</mat-error>
   </mat-form-field>
+  
 
   <div class="signup__buttons">
     <button mat-raised-button class="signup__close-button" (click)="closeDialog()">Cancel</button>
-    <button mat-raised-button class="signup__signup-button" (click)="signup()">Sign Up</button>
+    <button mat-raised-button class="signup__signup-button" (click)="signup()" [disabled]="loading || !areAllFieldsFilled()">
+      <span *ngIf="loading">
+        <mat-progress-spinner mode="indeterminate" diameter="20"></mat-progress-spinner>
+      </span>
+      <span *ngIf="!loading">Sign Up</span>
+    </button>
   </div>
 </div>
