--- a/src/app/components/signup-dialog/signup-dialog.component.scss
+++ b/src/app/components/signup-dialog/signup-dialog.component.scss
@@ -12,17 +12,14 @@
       font-size: 25px;
       margin-bottom: 20px;
   
-      & p {
-        &:first-child {
-          font-weight: bold;
-          margin-left: 18px;
-        }
+      &__title {
+        font-weight: bold;
+        margin-left: 18px;
+      }
   
-        &:last-child {
-          font-weight: lighter;
-          margin-right: 10px;
-          cursor: pointer;
-        }
+      &__close-icon {
+        cursor: pointer;
+        font-size: 25px;
       }
     }
   
@@ -30,6 +27,7 @@
       display: flex;
       width: 90%;
       margin: auto;
+      margin-bottom: 15px;
     }
   
     &__buttons {
@@ -50,7 +48,14 @@
         color: white;
         border-radius: 5px;
         font-weight: bold;
+        
+        &:hover {
+          background-color: rgb(197, 110, 51);
+        }
       }
+    }
+    &__error {
+      margin-left: -17px;
     }
   }
   
