--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     align-self: center;
 
-    & p {
+    &__text {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -23,19 +23,45 @@
       font-family: 'Dancing Script', cursive;
     }
 
-    & img {
+    &__image {
       width: 100px;
       height: auto;
       justify-content: center;
       align-items: center;
-      // padding-top: 15px;
+    }
+  }
+
+  &__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &__username {
+      color: aliceblue;
+      font-size: 20px;
+      margin-right: 20px;
+    }
+
+    &__button {
+      margin-right: 20px;
+      border-radius: 10px;
+      padding: 8px 20px;
+      font-weight: bold;
+      cursor: pointer;
     }
   }
 
   &__auth-btn {
     display: flex;
 
-    button {
+    &__signup {
+      margin-right: 20px;
+      border-radius: 10px;
+      padding: 8px 20px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    &__login {
       margin-right: 20px;
       border-radius: 10px;
       padding: 8px 20px;
