--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
-.body{
-    margin: 0;
+html,
+body {
+  height: 100%;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.success-snackbar,
+.error-snackbar {
+  background: #292929 !important;
+  color: whitesmoke !important;
+  position: relative;
+  overflow: hidden;
+  &::before {
+    content: "";
+    width: 140px;
+    height: 90px;
+    border-radius: 50%;
+    background: #01dc6a;
+    position: absolute;
+    left: -40px;
+    z-index: -1;
+    top: -10px;
+    filter: blur(56px);
+  }
+}
+
+.success-snackbar {
+  &::before {
+    background: #01dc6a;
+  }
+  .snack-bar__icon {
+    color: #01dc6a;
+  }
+}
+
+.error-snackbar {
+  &::before {
+    background: #fe3451;
+  }
+  .snack-bar__icon {
+    color: #fe3451;
+  }
+}
