Add JWT and dashboard functionalities
-Fetch dashboard table content based on token verification
-Add Pagination and filter
-Add route gaurd

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <div class="app-container">
   <app-navbar
     [isAuthenticated]="isAuthenticated"
-    [username]="username"
     (loginRequested)="openLoginDialog()"
     (logoutRequested)="logout()"
   >
   </app-navbar>
 
-  <app-homepage></app-homepage>
+  <router-outlet></router-outlet>
 </div>
