--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -45,6 +45,7 @@
       </mat-error>
     </mat-form-field>
 
+    <!-- Cancel Button -->
     <div class="login__buttons">
       <button
         mat-raised-button
@@ -53,6 +54,8 @@
       >
         Cancel
       </button>
+
+      <!-- Log In Button -->
       <button
         mat-raised-button
         class="login__login-button"
