--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,7 @@
 .app-container {
-    background-image: url('../assets/coffee_background.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100%;
-    overflow-x: hidden;
-  }
-
-
+  background-image: url("../assets/coffee_background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  overflow-x: hidden;
+}
