--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -20,3 +20,23 @@
     font-family: "Alegreya Sans", sans-serif;
   }
 }
+table {
+  width: 900px;
+}
+
+.mat-mdc-form-field {
+  font-size: 14px;
+  margin-top: 100px;
+  width: 60%;
+}
+
+.filter {
+  width: 900px;
+}
+
+td,
+th {
+  width: 25%;
+  justify-content: center;
+  align-items: center;
+}
