--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -20,7 +20,7 @@
       justify-content: center;
       align-items: center;
       font-size: 33px;
-      font-family: 'Dancing Script', cursive;
+      font-family: "Dancing Script", cursive;
     }
 
     &__image {
